--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>hii</h1>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni natus dignissimos quasi inventore nemo necessitatibus eligendi veritatis nostrum, dolorum, culpa, quo beatae eveniet repellat labore unde exercitationem consequuntur blanditiis sed?</h2>
 </body>
 </html>
