--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hii</h1>
-    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni natus dignissimos quasi inventore nemo necessitatibus eligendi veritatis nostrum, dolorum, culpa, quo beatae eveniet repellat labore unde exercitationem consequuntur blanditiis sed?</h2>
+   <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus impedit beatae, maiores sint eligendi atque nesciunt necessitatibus? Necessitatibus sint iure sunt impedit eaque sapiente voluptate, nam voluptatum optio laudantium maiores?
+   </h1> 
 </body>
 </html>
