--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-   <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus impedit beatae, maiores sint eligendi atque nesciunt necessitatibus? Necessitatibus sint iure sunt impedit eaque sapiente voluptate, nam voluptatum optio laudantium maiores?
-   </h1> 
+<div class="Header">Header </div>
+<div class="menu">
+    <ul><li>Menu 1</li>
+        <li>Menu 2</li>
+        <li>Menu 3</li>
+        
+    </ul>
+    <div class="content">Content</div>
+
+
+    <div class="Aside">Aside</div>
+    <div class="Footer">Footer</div>
+    
+</div>
 </body>
 </html>
