--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <li>Menu 3</li>
         
     </ul>
-    <div class="content">Content</div>
+    </div>
+    <div class="content"> Content </div>
 
 
     <div class="Aside">Aside</div>
